src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Disposition__c</fullName>
        <description>Field added to support C&amp;S</description>
        <inlineHelpText>Please select the appropriate disposition of this call.</inlineHelpText>
        <label>Call Disposition</label>
        <picklist>
            <picklistValues>
                <fullName>Meeting Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest, Call Back Later</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest, Send Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Busy, Call Back Later</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Interest, Reason Given</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Interest, No Reason Given</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Contact, No Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left Voicemail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Status__c</fullName>
        <label>Email Status</label>
        <picklist>
            <picklistValues>
                <fullName>Clicked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opened</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bounced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Month_Created__c</fullName>
        <formula>CASE(MONTH(DATEVALUE(CreatedDate)), 1, &quot;01 - January&quot;, 2, &quot;02 - February&quot;, 3, &quot; 03 - March&quot;, 4, &quot; 04 - April&quot;, 5, &quot; 05 - May&quot;, 6, &quot;06 - June&quot;, 7, &quot;07 - July&quot;, 8, &quot;08 - August&quot;, 9, &quot;09 - September&quot;, 10, &quot;10 - October&quot;, 11, &quot;11 - November&quot;, 12, &quot;12 - December&quot;, &quot;None&quot;) &amp; &quot; &quot; &amp; TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Created</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Duration_Minutes__c</fullName>
        <label>Time/Duration (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <formula>Case(
MOD( DATE(YEAR(DATEVALUE(CreatedDate)), 1, 1) - DATE (1900, 1, 7), 7),
0, ( (DATEVALUE(CreatedDate)) - DATE(YEAR((DATEVALUE(CreatedDate)) ),1,1) + 3) /7,
1, ( (DATEVALUE(CreatedDate)) - DATE(YEAR((DATEVALUE(CreatedDate)) ),1,1) + 4) /7,
2, ( (DATEVALUE(CreatedDate)) - DATE(YEAR((DATEVALUE(CreatedDate)) ),1,1) + 5) /7,
3, ( (DATEVALUE(CreatedDate)) - DATE(YEAR((DATEVALUE(CreatedDate)) ),1,1) + 6) /7,
4, ( (DATEVALUE(CreatedDate)) - DATE(YEAR((DATEVALUE(CreatedDate)) ),1,1) + 7) /7,
5, ( (DATEVALUE(CreatedDate)) - DATE(YEAR((DATEVALUE(CreatedDate)) ),1,1) + 1) /7,
6, ( (DATEVALUE(CreatedDate)) - DATE(YEAR((DATEVALUE(CreatedDate)) ),1,1) + 2) /7,
99)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>icrt__AeGuide_Name__c</fullName>
        <description>Used to identify the Sales Guide matching the task</description>
        <label>Guide Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isdc_dialed_phone_number__c</fullName>
        <label>Phone Dialed</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>isdc_dialer_call_type__c</fullName>
        <label>Dialer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Click-to-Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domino</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isdc_dialer_list_name__c</fullName>
        <label>List Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isdc_dialer_query_name__c</fullName>
        <label>Query Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <listViews>
        <fullName>activities__Overdue_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Overdue Tasks</label>
    </listViews>
    <listViews>
        <fullName>activities__Today_Overdue_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Today + Overdue Tasks</label>
    </listViews>
    <listViews>
        <fullName>activities__TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>activities__Tomorrow_s_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Tomorrow&apos;s Tasks</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>